parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_body
Rule 2     empty -> <empty>
Rule 3     global_body -> optional_variables_declaration_list optional_assignment_list function optional_functions_declaration_list optional_class_declaration_list
Rule 4     optional_assignment_list -> empty
Rule 5     optional_assignment_list -> assignment_list
Rule 6     assignment_list -> statement_assignment
Rule 7     assignment_list -> statement_assignment assignment_list
Rule 8     body -> optional_variables_declaration_list optional_functions_declaration_list optional_statement_list
Rule 9     optional_variables_declaration_list -> empty
Rule 10    optional_variables_declaration_list -> variables_declaration_list
Rule 11    variables_declaration_list -> TYPE variables_list SEMICOL
Rule 12    variables_declaration_list -> TYPE variables_list SEMICOL variables_declaration_list
Rule 13    TYPE -> INT
Rule 14    TYPE -> FLOAT
Rule 15    TYPE -> BOOL
Rule 16    TYPE -> CHAR
Rule 17    variables_list -> IDENT
Rule 18    variables_list -> IDENT COMMA variables_list
Rule 19    optional_class_declaration_list -> empty
Rule 20    optional_class_declaration_list -> class_declaration_list
Rule 21    class_declaration_list -> class_declaration
Rule 22    class_declaration_list -> class_declaration class_declaration_list
Rule 23    class_declaration -> CLASS IDENT optional_extends LCURL optional_variables_declaration_list optional_functions_declaration_list RCURL
Rule 24    optional_extends -> empty
Rule 25    optional_functions_declaration_list -> empty
Rule 26    optional_functions_declaration_list -> functions_declaration_list
Rule 27    functions_declaration_list -> function
Rule 28    functions_declaration_list -> function functions_declaration_list
Rule 29    function -> FUNCTION TYPE IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL
Rule 30    optional_parameter_list -> empty
Rule 31    optional_parameter_list -> parameter_list
Rule 32    parameter_list -> TYPE IDENT
Rule 33    parameter_list -> TYPE IDENT COMMA parameter_list
Rule 34    statement -> statement_return
Rule 35    statement -> statement_print
Rule 36    statement -> statement_assignment
Rule 37    statement -> statement_ifthenelse
Rule 38    statement -> statement_while
Rule 39    statement -> statement_compound
Rule 40    statement_return -> RETURN expression SEMICOL
Rule 41    statement_print -> PRINT LPAREN expression RPAREN SEMICOL
Rule 42    statement_assignment -> IDENT ASSIGN expression SEMICOL
Rule 43    statement_ifthenelse -> IF expression THEN statement ELSE statement
Rule 44    statement_while -> WHILE expression DO statement
Rule 45    statement_compound -> LCURL statement_list RCURL
Rule 46    optional_statement_list -> empty
Rule 47    optional_statement_list -> statement_list
Rule 48    statement_list -> statement
Rule 49    statement_list -> statement statement_list
Rule 50    expression -> expression_integer
Rule 51    expression -> expression_float
Rule 52    expression -> expression_bool
Rule 53    expression -> expression_char
Rule 54    expression -> expression_identifier
Rule 55    expression -> expression_call
Rule 56    expression -> expression_binop
Rule 57    expression -> expression_attribute
Rule 58    expression_integer -> INT
Rule 59    expression_float -> FLOAT
Rule 60    expression_bool -> BOOL
Rule 61    expression_char -> CHAR
Rule 62    expression_identifier -> IDENT
Rule 63    expression_call -> IDENT LPAREN optional_expression_list RPAREN
Rule 64    expression_attribute -> IDENT DOT IDENT
Rule 65    expression_binop -> expression PLUS expression
Rule 66    expression_binop -> expression MINUS expression
Rule 67    expression_binop -> expression TIMES expression
Rule 68    expression_binop -> expression DIVIDE expression
Rule 69    expression_binop -> expression EQ expression
Rule 70    expression_binop -> expression NEQ expression
Rule 71    expression_binop -> expression LT expression
Rule 72    expression_binop -> expression GT expression
Rule 73    expression_binop -> expression LTE expression
Rule 74    expression_binop -> expression GTE expression
Rule 75    optional_expression_list -> empty
Rule 76    optional_expression_list -> expression_list
Rule 77    expression_list -> expression
Rule 78    expression_list -> expression COMMA expression_list

Terminals, with rules where they appear

ASSIGN               : 42
BOOL                 : 15 60
CHAR                 : 16 61
CLASS                : 23
COMMA                : 18 33 78
DIVIDE               : 68
DO                   : 44
DOT                  : 64
ELSE                 : 43
EQ                   : 69
FLOAT                : 14 59
FUNCTION             : 29
GT                   : 72
GTE                  : 74
IDENT                : 17 18 23 29 32 33 42 62 63 64 64
IF                   : 43
INT                  : 13 58
LCURL                : 23 29 45
LPAREN               : 29 41 63
LT                   : 71
LTE                  : 73
MINUS                : 66
NEQ                  : 70
PLUS                 : 65
PRINT                : 41
RCURL                : 23 29 45
RETURN               : 40
RPAREN               : 29 41 63
SEMICOL              : 11 12 40 41 42
THEN                 : 43
TIMES                : 67
WHILE                : 44
error                : 

Nonterminals, with rules where they appear

TYPE                 : 11 12 29 32 33
assignment_list      : 5 7
body                 : 29
class_declaration    : 21 22
class_declaration_list : 20 22
empty                : 4 9 19 24 25 30 46 75
expression           : 40 41 42 43 44 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 77 78
expression_attribute : 57
expression_binop     : 56
expression_bool      : 52
expression_call      : 55
expression_char      : 53
expression_float     : 51
expression_identifier : 54
expression_integer   : 50
expression_list      : 76 78
function             : 3 27 28
functions_declaration_list : 26 28
global_body          : 1
optional_assignment_list : 3
optional_class_declaration_list : 3
optional_expression_list : 63
optional_extends     : 23
optional_functions_declaration_list : 3 8 23
optional_parameter_list : 29
optional_statement_list : 8
optional_variables_declaration_list : 3 8 23
parameter_list       : 31 33
program              : 0
statement            : 43 43 44 48 49
statement_assignment : 6 7 36
statement_compound   : 39
statement_ifthenelse : 37
statement_list       : 45 47 49
statement_print      : 35
statement_return     : 34
statement_while      : 38
variables_declaration_list : 10 12
variables_list       : 11 12 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_body
    (3) global_body -> . optional_variables_declaration_list optional_assignment_list function optional_functions_declaration_list optional_class_declaration_list
    (9) optional_variables_declaration_list -> . empty
    (10) optional_variables_declaration_list -> . variables_declaration_list
    (2) empty -> .
    (11) variables_declaration_list -> . TYPE variables_list SEMICOL
    (12) variables_declaration_list -> . TYPE variables_list SEMICOL variables_declaration_list
    (13) TYPE -> . INT
    (14) TYPE -> . FLOAT
    (15) TYPE -> . BOOL
    (16) TYPE -> . CHAR

    IDENT           reduce using rule 2 (empty -> .)
    FUNCTION        reduce using rule 2 (empty -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10

    program                        shift and go to state 1
    global_body                    shift and go to state 2
    optional_variables_declaration_list shift and go to state 3
    empty                          shift and go to state 4
    variables_declaration_list     shift and go to state 5
    TYPE                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> global_body .

    $end            reduce using rule 1 (program -> global_body .)


state 3

    (3) global_body -> optional_variables_declaration_list . optional_assignment_list function optional_functions_declaration_list optional_class_declaration_list
    (4) optional_assignment_list -> . empty
    (5) optional_assignment_list -> . assignment_list
    (2) empty -> .
    (6) assignment_list -> . statement_assignment
    (7) assignment_list -> . statement_assignment assignment_list
    (42) statement_assignment -> . IDENT ASSIGN expression SEMICOL

    FUNCTION        reduce using rule 2 (empty -> .)
    IDENT           shift and go to state 15

    optional_assignment_list       shift and go to state 11
    empty                          shift and go to state 12
    assignment_list                shift and go to state 13
    statement_assignment           shift and go to state 14

state 4

    (9) optional_variables_declaration_list -> empty .

    IDENT           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    FUNCTION        reduce using rule 9 (optional_variables_declaration_list -> empty .)
    RCURL           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    RETURN          reduce using rule 9 (optional_variables_declaration_list -> empty .)
    PRINT           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    IF              reduce using rule 9 (optional_variables_declaration_list -> empty .)
    WHILE           reduce using rule 9 (optional_variables_declaration_list -> empty .)
    LCURL           reduce using rule 9 (optional_variables_declaration_list -> empty .)


state 5

    (10) optional_variables_declaration_list -> variables_declaration_list .

    IDENT           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    FUNCTION        reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    RCURL           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    RETURN          reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    PRINT           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    IF              reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    WHILE           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)
    LCURL           reduce using rule 10 (optional_variables_declaration_list -> variables_declaration_list .)


state 6

    (11) variables_declaration_list -> TYPE . variables_list SEMICOL
    (12) variables_declaration_list -> TYPE . variables_list SEMICOL variables_declaration_list
    (17) variables_list -> . IDENT
    (18) variables_list -> . IDENT COMMA variables_list

    IDENT           shift and go to state 17

    variables_list                 shift and go to state 16

state 7

    (13) TYPE -> INT .

    IDENT           reduce using rule 13 (TYPE -> INT .)


state 8

    (14) TYPE -> FLOAT .

    IDENT           reduce using rule 14 (TYPE -> FLOAT .)


state 9

    (15) TYPE -> BOOL .

    IDENT           reduce using rule 15 (TYPE -> BOOL .)


state 10

    (16) TYPE -> CHAR .

    IDENT           reduce using rule 16 (TYPE -> CHAR .)


state 11

    (3) global_body -> optional_variables_declaration_list optional_assignment_list . function optional_functions_declaration_list optional_class_declaration_list
    (29) function -> . FUNCTION TYPE IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    FUNCTION        shift and go to state 19

    function                       shift and go to state 18

state 12

    (4) optional_assignment_list -> empty .

    FUNCTION        reduce using rule 4 (optional_assignment_list -> empty .)


state 13

    (5) optional_assignment_list -> assignment_list .

    FUNCTION        reduce using rule 5 (optional_assignment_list -> assignment_list .)


state 14

    (6) assignment_list -> statement_assignment .
    (7) assignment_list -> statement_assignment . assignment_list
    (6) assignment_list -> . statement_assignment
    (7) assignment_list -> . statement_assignment assignment_list
    (42) statement_assignment -> . IDENT ASSIGN expression SEMICOL

    FUNCTION        reduce using rule 6 (assignment_list -> statement_assignment .)
    IDENT           shift and go to state 15

    statement_assignment           shift and go to state 14
    assignment_list                shift and go to state 20

state 15

    (42) statement_assignment -> IDENT . ASSIGN expression SEMICOL

    ASSIGN          shift and go to state 21


state 16

    (11) variables_declaration_list -> TYPE variables_list . SEMICOL
    (12) variables_declaration_list -> TYPE variables_list . SEMICOL variables_declaration_list

    SEMICOL         shift and go to state 22


state 17

    (17) variables_list -> IDENT .
    (18) variables_list -> IDENT . COMMA variables_list

    SEMICOL         reduce using rule 17 (variables_list -> IDENT .)
    COMMA           shift and go to state 23


state 18

    (3) global_body -> optional_variables_declaration_list optional_assignment_list function . optional_functions_declaration_list optional_class_declaration_list
    (25) optional_functions_declaration_list -> . empty
    (26) optional_functions_declaration_list -> . functions_declaration_list
    (2) empty -> .
    (27) functions_declaration_list -> . function
    (28) functions_declaration_list -> . function functions_declaration_list
    (29) function -> . FUNCTION TYPE IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    CLASS           reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)
    FUNCTION        shift and go to state 19

    function                       shift and go to state 24
    optional_functions_declaration_list shift and go to state 25
    empty                          shift and go to state 26
    functions_declaration_list     shift and go to state 27

state 19

    (29) function -> FUNCTION . TYPE IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL
    (13) TYPE -> . INT
    (14) TYPE -> . FLOAT
    (15) TYPE -> . BOOL
    (16) TYPE -> . CHAR

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10

    TYPE                           shift and go to state 28

state 20

    (7) assignment_list -> statement_assignment assignment_list .

    FUNCTION        reduce using rule 7 (assignment_list -> statement_assignment assignment_list .)


state 21

    (42) statement_assignment -> IDENT ASSIGN . expression SEMICOL
    (50) expression -> . expression_integer
    (51) expression -> . expression_float
    (52) expression -> . expression_bool
    (53) expression -> . expression_char
    (54) expression -> . expression_identifier
    (55) expression -> . expression_call
    (56) expression -> . expression_binop
    (57) expression -> . expression_attribute
    (58) expression_integer -> . INT
    (59) expression_float -> . FLOAT
    (60) expression_bool -> . BOOL
    (61) expression_char -> . CHAR
    (62) expression_identifier -> . IDENT
    (63) expression_call -> . IDENT LPAREN optional_expression_list RPAREN
    (65) expression_binop -> . expression PLUS expression
    (66) expression_binop -> . expression MINUS expression
    (67) expression_binop -> . expression TIMES expression
    (68) expression_binop -> . expression DIVIDE expression
    (69) expression_binop -> . expression EQ expression
    (70) expression_binop -> . expression NEQ expression
    (71) expression_binop -> . expression LT expression
    (72) expression_binop -> . expression GT expression
    (73) expression_binop -> . expression LTE expression
    (74) expression_binop -> . expression GTE expression
    (64) expression_attribute -> . IDENT DOT IDENT

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    CHAR            shift and go to state 42
    IDENT           shift and go to state 29

    expression                     shift and go to state 30
    expression_integer             shift and go to state 31
    expression_float               shift and go to state 32
    expression_bool                shift and go to state 33
    expression_char                shift and go to state 34
    expression_identifier          shift and go to state 35
    expression_call                shift and go to state 36
    expression_binop               shift and go to state 37
    expression_attribute           shift and go to state 38

state 22

    (11) variables_declaration_list -> TYPE variables_list SEMICOL .
    (12) variables_declaration_list -> TYPE variables_list SEMICOL . variables_declaration_list
    (11) variables_declaration_list -> . TYPE variables_list SEMICOL
    (12) variables_declaration_list -> . TYPE variables_list SEMICOL variables_declaration_list
    (13) TYPE -> . INT
    (14) TYPE -> . FLOAT
    (15) TYPE -> . BOOL
    (16) TYPE -> . CHAR

    IDENT           reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    FUNCTION        reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    RCURL           reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    RETURN          reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    PRINT           reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    IF              reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    WHILE           reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    LCURL           reduce using rule 11 (variables_declaration_list -> TYPE variables_list SEMICOL .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10

    TYPE                           shift and go to state 6
    variables_declaration_list     shift and go to state 43

state 23

    (18) variables_list -> IDENT COMMA . variables_list
    (17) variables_list -> . IDENT
    (18) variables_list -> . IDENT COMMA variables_list

    IDENT           shift and go to state 17

    variables_list                 shift and go to state 44

state 24

    (27) functions_declaration_list -> function .
    (28) functions_declaration_list -> function . functions_declaration_list
    (27) functions_declaration_list -> . function
    (28) functions_declaration_list -> . function functions_declaration_list
    (29) function -> . FUNCTION TYPE IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    CLASS           reduce using rule 27 (functions_declaration_list -> function .)
    $end            reduce using rule 27 (functions_declaration_list -> function .)
    RCURL           reduce using rule 27 (functions_declaration_list -> function .)
    RETURN          reduce using rule 27 (functions_declaration_list -> function .)
    PRINT           reduce using rule 27 (functions_declaration_list -> function .)
    IDENT           reduce using rule 27 (functions_declaration_list -> function .)
    IF              reduce using rule 27 (functions_declaration_list -> function .)
    WHILE           reduce using rule 27 (functions_declaration_list -> function .)
    LCURL           reduce using rule 27 (functions_declaration_list -> function .)
    FUNCTION        shift and go to state 19

    function                       shift and go to state 24
    functions_declaration_list     shift and go to state 45

state 25

    (3) global_body -> optional_variables_declaration_list optional_assignment_list function optional_functions_declaration_list . optional_class_declaration_list
    (19) optional_class_declaration_list -> . empty
    (20) optional_class_declaration_list -> . class_declaration_list
    (2) empty -> .
    (21) class_declaration_list -> . class_declaration
    (22) class_declaration_list -> . class_declaration class_declaration_list
    (23) class_declaration -> . CLASS IDENT optional_extends LCURL optional_variables_declaration_list optional_functions_declaration_list RCURL

    $end            reduce using rule 2 (empty -> .)
    CLASS           shift and go to state 50

    optional_class_declaration_list shift and go to state 46
    empty                          shift and go to state 47
    class_declaration_list         shift and go to state 48
    class_declaration              shift and go to state 49

state 26

    (25) optional_functions_declaration_list -> empty .

    CLASS           reduce using rule 25 (optional_functions_declaration_list -> empty .)
    $end            reduce using rule 25 (optional_functions_declaration_list -> empty .)
    RCURL           reduce using rule 25 (optional_functions_declaration_list -> empty .)
    RETURN          reduce using rule 25 (optional_functions_declaration_list -> empty .)
    PRINT           reduce using rule 25 (optional_functions_declaration_list -> empty .)
    IDENT           reduce using rule 25 (optional_functions_declaration_list -> empty .)
    IF              reduce using rule 25 (optional_functions_declaration_list -> empty .)
    WHILE           reduce using rule 25 (optional_functions_declaration_list -> empty .)
    LCURL           reduce using rule 25 (optional_functions_declaration_list -> empty .)


state 27

    (26) optional_functions_declaration_list -> functions_declaration_list .

    CLASS           reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    $end            reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    RCURL           reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    RETURN          reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    PRINT           reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    IDENT           reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    IF              reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    WHILE           reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)
    LCURL           reduce using rule 26 (optional_functions_declaration_list -> functions_declaration_list .)


state 28

    (29) function -> FUNCTION TYPE . IDENT LPAREN optional_parameter_list RPAREN LCURL body RCURL

    IDENT           shift and go to state 51


state 29

    (62) expression_identifier -> IDENT .
    (63) expression_call -> IDENT . LPAREN optional_expression_list RPAREN
    (64) expression_attribute -> IDENT . DOT IDENT

    SEMICOL         reduce using rule 62 (expression_identifier -> IDENT .)
    PLUS            reduce using rule 62 (expression_identifier -> IDENT .)
    MINUS           reduce using rule 62 (expression_identifier -> IDENT .)
    TIMES           reduce using rule 62 (expression_identifier -> IDENT .)
    DIVIDE          reduce using rule 62 (expression_identifier -> IDENT .)
    EQ              reduce using rule 62 (expression_identifier -> IDENT .)
    NEQ             reduce using rule 62 (expression_identifier -> IDENT .)
    LT              reduce using rule 62 (expression_identifier -> IDENT .)
    GT              reduce using rule 62 (expression_identifier -> IDENT .)
    LTE             reduce using rule 62 (expression_identifier -> IDENT .)
    GTE             reduce using rule 62 (expression_identifier -> IDENT .)
    COMMA           reduce using rule 62 (expression_identifier -> IDENT .)
    RPAREN          reduce using rule 62 (expression_identifier -> IDENT .)
    THEN            reduce using rule 62 (expression_identifier -> IDENT .)
    DO              reduce using rule 62 (expression_identifier -> IDENT .)
    LPAREN          shift and go to state 52
    DOT             shift and go to state 53


state 30

    (42) statement_assignment -> IDENT ASSIGN expression . SEMICOL
    (65) expression_binop -> expression . PLUS expression
    (66) expression_binop -> expression . MINUS expression
    (67) expression_binop -> expression . TIMES expression
    (68) expression_binop -> expression . DIVIDE expression
    (69) expression_binop -> expression . EQ expression
    (70) expression_binop -> expression . NEQ expression
    (71) expression_binop -> expression . LT expression
    (72) expression_binop -> expression . GT expression
    (73) expression_binop -> expression . LTE expression
    (74) expression_binop -> expression . GTE expression

    SEMICOL         shift and go to state 54
    PLUS            shift and go to state 55
    MINUS           shift and go to state 56
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58
    EQ              shift and go to state 59
    NEQ             shift and go to state 60
    LT              shift and go to state 61
    GT              shift and go to state 62
    LTE             shift and go to state 63
    GTE             shift and go to state 64


state 31

    (50) expression -> expression_integer .

    SEMICOL         reduce using rule 50 (expression -> expression_integer .)
    PLUS            reduce using rule 50 (expression -> expression_integer .)
    MINUS           reduce using rule 50 (expression -> expression_integer .)
    TIMES           reduce using rule 50 (expression -> expression_integer .)
    DIVIDE          reduce using rule 50 (expression -> expression_integer .)
    EQ              reduce using rule 50 (expression -> expression_integer .)
    NEQ             reduce using rule 50 (expression -> expression_integer .)
    LT              reduce using rule 50 (expression -> expression_integer .)
    GT              reduce using rule 50 (expression -> expression_integer .)
    LTE             reduce using rule 50 (expression -> expression_integer .)
    GTE             reduce using rule 50 (expression -> expression_integer .)
    COMMA           reduce using rule 50 (expression -> expression_integer .)
    RPAREN          reduce using rule 50 (expression -> expression_integer .)
    THEN            reduce using rule 50 (expression -> expression_integer .)
    DO              reduce using rule 50 (expression -> expression_integer .)


state 32

    (51) expression -> expression_float .

    SEMICOL         reduce using rule 51 (expression -> expression_float .)
    PLUS            reduce using rule 51 (expression -> expression_float .)
    MINUS           reduce using rule 51 (expression -> expression_float .)
    TIMES           reduce using rule 51 (expression -> expression_float .)
    DIVIDE          reduce using rule 51 (expression -> expression_float .)
    EQ              reduce using rule 51 (expression -> expression_float .)
    NEQ             reduce using rule 51 (expression -> expression_float .)
    LT              reduce using rule 51 (expression -> expression_float .)
    GT              reduce using rule 51 (expression -> expression_float .)
    LTE             reduce using rule 51 (expression -> expression_float .)
    GTE             reduce using rule 51 (expression -> expression_float .)
    COMMA           reduce using rule 51 (expression -> expression_float .)
    RPAREN          reduce using rule 51 (expression -> expression_float .)
    THEN            reduce using rule 51 (expression -> expression_float .)
    DO              reduce using rule 51 (expression -> expression_float .)


state 33

    (52) expression -> expression_bool .

    SEMICOL         reduce using rule 52 (expression -> expression_bool .)
    PLUS            reduce using rule 52 (expression -> expression_bool .)
    MINUS           reduce using rule 52 (expression -> expression_bool .)
    TIMES           reduce using rule 52 (expression -> expression_bool .)
    DIVIDE          reduce using rule 52 (expression -> expression_bool .)
    EQ              reduce using rule 52 (expression -> expression_bool .)
    NEQ             reduce using rule 52 (expression -> expression_bool .)
    LT              reduce using rule 52 (expression -> expression_bool .)
    GT              reduce using rule 52 (expression -> expression_bool .)
    LTE             reduce using rule 52 (expression -> expression_bool .)
    GTE             reduce using rule 52 (expression -> expression_bool .)
    COMMA           reduce using rule 52 (expression -> expression_bool .)
    RPAREN          reduce using rule 52 (expression -> expression_bool .)
    THEN            reduce using rule 52 (expression -> expression_bool .)
    DO              reduce using rule 52 (expression -> expression_bool .)


state 34

    (53) expression -> expression_char .

    SEMICOL         reduce using rule 53 (expression -> expression_char .)
    PLUS            reduce using rule 53 (expression -> expression_char .)
    MINUS           reduce using rule 53 (expression -> expression_char .)
    TIMES           reduce using rule 53 (expression -> expression_char .)
    DIVIDE          reduce using rule 53 (expression -> expression_char .)
    EQ              reduce using rule 53 (expression -> expression_char .)
    NEQ             reduce using rule 53 (expression -> expression_char .)
    LT              reduce using rule 53 (expression -> expression_char .)
    GT              reduce using rule 53 (expression -> expression_char .)
    LTE             reduce using rule 53 (expression -> expression_char .)
    GTE             reduce using rule 53 (expression -> expression_char .)
    COMMA           reduce using rule 53 (expression -> expression_char .)
    RPAREN          reduce using rule 53 (expression -> expression_char .)
    THEN            reduce using rule 53 (expression -> expression_char .)
    DO              reduce using rule 53 (expression -> expression_char .)


state 35

    (54) expression -> expression_identifier .

    SEMICOL         reduce using rule 54 (expression -> expression_identifier .)
    PLUS            reduce using rule 54 (expression -> expression_identifier .)
    MINUS           reduce using rule 54 (expression -> expression_identifier .)
    TIMES           reduce using rule 54 (expression -> expression_identifier .)
    DIVIDE          reduce using rule 54 (expression -> expression_identifier .)
    EQ              reduce using rule 54 (expression -> expression_identifier .)
    NEQ             reduce using rule 54 (expression -> expression_identifier .)
    LT              reduce using rule 54 (expression -> expression_identifier .)
    GT              reduce using rule 54 (expression -> expression_identifier .)
    LTE             reduce using rule 54 (expression -> expression_identifier .)
    GTE             reduce using rule 54 (expression -> expression_identifier .)
    COMMA           reduce using rule 54 (expression -> expression_identifier .)
    RPAREN          reduce using rule 54 (expression -> expression_identifier .)
    THEN            reduce using rule 54 (expression -> expression_identifier .)
    DO              reduce using rule 54 (expression -> expression_identifier .)


state 36

    (55) expression -> expression_call .

    SEMICOL         reduce using rule 55 (expression -> expression_call .)
    PLUS            reduce using rule 55 (expression -> expression_call .)
    MINUS           reduce using rule 55 (expression -> expression_call .)
    TIMES           reduce using rule 55 (expression -> expression_call .)
    DIVIDE          reduce using rule 55 (expression -> expression_call .)
    EQ              reduce using rule 55 (expression -> expression_call .)
    NEQ             reduce using rule 55 (expression -> expression_call .)
    LT              reduce using rule 55 (expression -> expression_call .)
    GT              reduce using rule 55 (expression -> expression_call .)
    LTE             reduce using rule 55 (expression -> expression_call .)
    GTE             reduce using rule 55 (expression -> expression_call .)
    COMMA           reduce using rule 55 (expression -> expression_call .)
    RPAREN          reduce using rule 55 (expression -> expression_call .)
    THEN            reduce using rule 55 (expression -> expression_call .)
    DO              reduce using rule 55 (expression -> expression_call .)


state 37

    (56) expression -> expression_binop .

    SEMICOL         reduce using rule 56 (expression -> expression_binop .)
    PLUS            reduce using rule 56 (expression -> expression_binop .)
    MINUS           reduce using rule 56 (expression -> expression_binop .)
    TIMES           reduce using rule 56 (expression -> expression_binop .)
    DIVIDE          reduce using rule 56 (expression -> expression_binop .)
    EQ              reduce using rule 56 (expression -> expression_binop .)
    NEQ             reduce using rule 56 (expression -> expression_binop .)
    LT              reduce using rule 56 (expression -> expression_binop .)
    GT              reduce using rule 56 (expression -> expression_binop .)
    LTE             reduce using rule 56 (expression -> expression_binop .)
    GTE             reduce using rule 56 (expression -> expression_binop .)
    COMMA           reduce using rule 56 (expression -> expression_binop .)
    RPAREN          reduce using rule 56 (expression -> expression_binop .)
    THEN            reduce using rule 56 (expression -> expression_binop .)
    DO              reduce using rule 56 (expression -> expression_binop .)


state 38

    (57) expression -> expression_attribute .

    SEMICOL         reduce using rule 57 (expression -> expression_attribute .)
    PLUS            reduce using rule 57 (expression -> expression_attribute .)
    MINUS           reduce using rule 57 (expression -> expression_attribute .)
    TIMES           reduce using rule 57 (expression -> expression_attribute .)
    DIVIDE          reduce using rule 57 (expression -> expression_attribute .)
    EQ              reduce using rule 57 (expression -> expression_attribute .)
    NEQ             reduce using rule 57 (expression -> expression_attribute .)
    LT              reduce using rule 57 (expression -> expression_attribute .)
    GT              reduce using rule 57 (expression -> expression_attribute .)
    LTE             reduce using rule 57 (expression -> expression_attribute .)
    GTE             reduce using rule 57 (expression -> expression_attribute .)
    COMMA           reduce using rule 57 (expression -> expression_attribute .)
    RPAREN          reduce using rule 57 (expression -> expression_attribute .)
    THEN            reduce using rule 57 (expression -> expression_attribute .)
    DO              reduce using rule 57 (expression -> expression_attribute .)


state 39

    (58) expression_integer -> INT .

    SEMICOL         reduce using rule 58 (expression_integer -> INT .)
    PLUS            reduce using rule 58 (expression_integer -> INT .)
    MINUS           reduce using rule 58 (expression_integer -> INT .)
    TIMES           reduce using rule 58 (expression_integer -> INT .)
    DIVIDE          reduce using rule 58 (expression_integer -> INT .)
    EQ              reduce using rule 58 (expression_integer -> INT .)
    NEQ             reduce using rule 58 (expression_integer -> INT .)
    LT              reduce using rule 58 (expression_integer -> INT .)
    GT              reduce using rule 58 (expression_integer -> INT .)
    LTE             reduce using rule 58 (expression_integer -> INT .)
    GTE             reduce using rule 58 (expression_integer -> INT .)
    COMMA           reduce using rule 58 (expression_integer -> INT .)
    RPAREN          reduce using rule 58 (expression_integer -> INT .)
    THEN            reduce using rule 58 (expression_integer -> INT .)
    DO              reduce using rule 58 (expression_integer -> INT .)


state 40

    (59) expression_float -> FLOAT .

    SEMICOL         reduce using rule 59 (expression_float -> FLOAT .)
    PLUS            reduce using rule 59 (expression_float -> FLOAT .)
    MINUS           reduce using rule 59 (expression_float -> FLOAT .)
    TIMES           reduce using rule 59 (expression_float -> FLOAT .)
    DIVIDE          reduce using rule 59 (expression_float -> FLOAT .)
    EQ              reduce using rule 59 (expression_float -> FLOAT .)
    NEQ             reduce using rule 59 (expression_float -> FLOAT .)
    LT              reduce using rule 59 (expression_float -> FLOAT .)
    GT              reduce using rule 59 (expression_float -> FLOAT .)
    LTE             reduce using rule 59 (expression_float -> FLOAT .)
    GTE             reduce using rule 59 (expression_float -> FLOAT .)
    COMMA           reduce using rule 59 (expression_float -> FLOAT .)
    RPAREN          reduce using rule 59 (expression_float -> FLOAT .)
    THEN            reduce using rule 59 (expression_float -> FLOAT .)
    DO              reduce using rule 59 (expression_float -> FLOAT .)


state 41

    (60) expression_bool -> BOOL .

    SEMICOL         reduce using rule 60 (expression_bool -> BOOL .)
    PLUS            reduce using rule 60 (expression_bool -> BOOL .)
    MINUS           reduce using rule 60 (expression_bool -> BOOL .)
    TIMES           reduce using rule 60 (expression_bool -> BOOL .)
    DIVIDE          reduce using rule 60 (expression_bool -> BOOL .)
    EQ              reduce using rule 60 (expression_bool -> BOOL .)
    NEQ             reduce using rule 60 (expression_bool -> BOOL .)
    LT              reduce using rule 60 (expression_bool -> BOOL .)
    GT              reduce using rule 60 (expression_bool -> BOOL .)
    LTE             reduce using rule 60 (expression_bool -> BOOL .)
    GTE             reduce using rule 60 (expression_bool -> BOOL .)
    COMMA           reduce using rule 60 (expression_bool -> BOOL .)
    RPAREN          reduce using rule 60 (expression_bool -> BOOL .)
    THEN            reduce using rule 60 (expression_bool -> BOOL .)
    DO              reduce using rule 60 (expression_bool -> BOOL .)


state 42

    (61) expression_char -> CHAR .
